<resources>
    <string name="app_name">Anime Wiki</string>
    <string name="namecharacter">Name Character</string>
    <string name="sortdesc">Sort Description</string>
    <string-array name="personal_description">
        <item>Age :121 \n Gender :Male \n Height : 225cm \n Hair Color : White, Bald (Formerly) \n Eye Color : White (manga/anime post-Rewind drug), Red (anime), Eyeless (Formerly) \n Blood Type : Varies (via Antigen Swap) \n Quirk : All For One (Duplicate; formerly Original) Various stolen Quirks</item>
        <item>Birthday :June 10 \n Age :55 (Pre-timeskip), 63 (Current) \n Gender :Male \n Height : 220cm  (Muscle form) \n Weight : 274kg (604lbs) (Before injury), 255kg (562lbs) (Muscle form) \n Hair Color : Blond \n Eye Color : Light blue \n Blood Type : A \n Quirk : Quirkless (Initially, currently), One For All (Formerly)</item>
        <item>Gender :Male \n Hair Color : Cadet Grey \n Eye Color : Grey \n Quirk : Fa Jin, One For All (Formerly)</item>
        <item>Birthday : January 18 \n Age : 23 (First appearance to Endeavor Agency Arc), 24 (Current) \n Gender : Male \n Height : 176cm \n Hair Color : White, Crimson (Formerly), Black (Formerly; dyed) \n Eye Color : Turquoise \n Quirk :Blueflame</item>
        <item>Gender : Male \n Hair Color : Bald \nEye Color : Dull blue \n Quirk : Blackwhip, One For All (Formerly)</item>
        <item>Gender : Male \n Hair Color : Black \n Eye Color : Gray \n Quirk : Smokescreen, One For All (Formerly)</item>
        <item>Age : 40 \n Gender : Male \n Hair Color : White \n Eye Color : Green \n Quirk : Danger Sense, One For All (Formerly)</item>
        <item>Birthday : August, 7 \n Age : 16 (First appearance), 17 (Current) \n Gender : Female \n Height : 157cm  \n Hair Color : Light dirty blonde \n Eye Color : Golden yellow \n Quirk : Transform</item>
        <item>Birthday : August, 7 \n Age : 16 (First appearance), 17 (Current) \n Gender : Female \n Height : 157cm  \n Hair Color : Light dirty blonde \n Eye Color : Golden yellow \n Quirk : Transform</item>
        <item>Birthday :July 15 \n Age :4 (First appearance), 14 (Chapter 1 and 2), 15 (Chapter 3 to Final Exams Arc), 16 (Forest Training Camp Arc to Chapter 429), 24 (Last appearance) \n Gender : Male \n Height : 166 cm  \n Hair Color : Green \n Eye Color : Green \n Blood Type : O \n Quirk : Quirkless (Initially, currently), One For All (Formerly), Gearshift (Formerly), Fa Jin (Formerly), Danger Sense (Formerly), Blackwhip (Formerly), Smokescreen (Formerly), Float (Formerly)</item>
        <item>Birthday :October 8 \n Age :31 (First appearance), 32 (Pre Timeskip), 40 (Current) \n Gender : Male \n Height : 181cm \n Hair Color :Brown \n Eye Color :Brown \n Quirk : Compress</item>
        <item>Gender :Female \n Hair Color : Black \n Eye Color :Purple \n Quirk : Float, One For All (Formerly)</item>
        <item>Birthday : August 8\n Age : 20 (First appearance), 21 (Forest Training Camp Arc to the Final War Arc), 29 (Post Time Skip) \n Gender : Male \n Height : 174cm \n Hair Color : Pink (manga), Purple (anime) \n Skin Color : Green \n Eye Color : Pink (manga), Red (anime) \n Quirk : Gecko, Body Bulk, Scalemail \n</item>
        <item>Birthday :April 4 \n Age : 20 (First appearance), 21 (Current) \n Gender : Male \n Height : 175 cm \n Hair Color : White, Light blue (Formerly), Black (Formerly) \n Eye Color : Red, Gray (Formerly) \n Quirk : Unknown original Quirk (Formerly), Quirkless (Formerly), Decay, All For One, Various stolen Quirks </item>
        <item>Birthday : May 10 \n Age : 31\n Gender Male \n Height : 178cm  \n Hair Color : Blond \n Eye Color :Gray-blue \n Quirk :Double</item>
        <item>Gender : Male \n Hair Color : White \n Eye Color : Green \n Quirk : One For All (Formerly), Quirk Bestowal (Formerly), Unnamed Power Stockpiling Quirk (Formerly), Quirkless</item>
    </string-array>
    <string name="description">Description</string>
    <string name="aboutpage">About</string>
    <string name="myname">Syukur Sidiq Nur Alam</string>
    <string name="myemail">syukursidiqnuralam@gmail.com</string>
    <string name="about">About Me</string>
    <string name="share">Share</string>
    <string-array name="data_name">
        <item>All For One</item>
        <item>All Might</item>
        <item>Bruce</item>
        <item>Dabi</item>
        <item>Daigoro</item>
        <item>En Tayutai</item>
        <item>Hikage</item>
        <item>Himiko Toga</item>
        <item>Izuku</item>
        <item>Kudo</item>
        <item>Mr Compress</item>
        <item>nana</item>
        <item>Spinner</item>
        <item>Tomura Shigaraki</item>
        <item>Twice</item>
        <item>Yoichi</item>
    </string-array>
    <string-array name="data_sortdesc">
        <item>If it\'s  freedom you desire, then submit to me, my brethren. And bear witness,by my side. </item>
        <item>It\'s fine now. Why? Because I am here! </item>
        <item> The third user of One For All.</item>
        <item>You must\'ve thought, As long as I face the future, I can be better!  </item>
        <item>This power in you, it\'s not something you can use casually, all distracted! Not anymore! Pull yourself together! </item>
        <item>Our Quirks are mostly standalone abilities... that will never rise to the level of ultimate moves. </item>
        <item> For better or worse... the manifestation of our Quirks has enabled him to act on his primary motivation. He now seeks to save everyone... as a true superhero.</item>
        <item> I wanted to become other people so badly. So in fits of jealousy and affection... I drank all of their blood.</item>
        <item> You\'ll be fine. After all, didn\'t you make an effort to reach out with a helping hand just now? You can be a hero. Do your best, kid!</item>
        <item>Our Meta Abilities were never what you should\'ve been wary of. Rather, you should fear the reason why someone chooses to use their gifts. </item>
        <item>I am Harima\'s great great grandson! The bandit king\'s blood flows through me! What\'s that, you say? You barely noticed me?! All part of the act!  </item>
        <item> When you have to save someone, they\'re usually in a scary situation. A true hero saves not only their lives, but also their hearts... That\'s what I believe.</item>
        <item> I thought... I\'d never get to be anyone. But by following you... Maybe... I can really be somebody. Shigaraki! Just watch me! I\'ve got my allies behind me!</item>
        <item>Nah. \'Cause I\'m a villain. I fight in the name of evil... To destroy. Doesn\'t matter... if you stamp out my hatred. Even if I wind up hollow... The villains... need a hero of their own. </item>
        <item>There\'s no place for insane guys like me in society. As for the people heroes like to save... yeah, they\'re always the good, virtuous ones. </item>
        <item> The Demon Lord did conquer the world, yes. But the hero fighting for justice struggled past the pain and managed to save everyone. Get it, brother? The villain always loses in the end!</item>

    </string-array>
</resources>